@@ -34,6 +34,8 @@ HIGH-PRIORITY IMPLEMENTATION CHANGES:
 
 LOW-PRIORITY IMPLEMENTATION CHANGES:
 ------------------------------------
+  * Allow keyboard buttons to alter shapes (+/- for size, e.g.)
+
   * Fix and use scanline fill for filled shapes.
   
   * Fix "update_shape()" function and use it to replace SDL_Flip()'s
